[project]
name = "the-structured-agent"
version = "0.1.0"
description = "Structured output parsing with Anthropic SDK and Pydantic"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "python-dotenv",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
